--- a/GYAK/GYAK01/1_lesson_practice_empty.ipynb
+++ b/GYAK/GYAK01/1_lesson_practice_empty.ipynb
@@ -17,7 +17,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#asdasdasdasd"
+   ]
   },
   {
    "cell_type": "code",
