--- a/GYAK/GYAK01/1_lesson_practice_empty.ipynb
+++ b/GYAK/GYAK01/1_lesson_practice_empty.ipynb
@@ -14,11 +14,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
    "source": [
-    "#asdasdasdasd"
+    "numbers = [1, 3, 5, 7, 11]\n",
+    "\n",
+    "def contains_odd(input_list):\n",
+    "    asd = False\n",
+    "    for item in input_list:\n",
+    "        if (item % 2 == 0):\n",
+    "            asd = True\n",
+    "\n",
+    "    return asd\n",
+    "\n",
+    "print(contains_odd(numbers))"
    ]
   },
   {
@@ -100,8 +118,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.10.6"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.10"
   },
   "orig_nbformat": 4,
   "vscode": {
