--- a/HAZI/HAZI01/1_homework_empty.ipynb
+++ b/HAZI/HAZI01/1_homework_empty.ipynb
@@ -15,10 +15,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 3, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "numbers = [1, 2, 3, 4, 5, 6, 7, 8]\n",
+    "\n",
+    "def subset(input_list, start_index, end_index):\n",
+    "    i = 0\n",
+    "    result_list = []\n",
+    "    for index in range(start_index, end_index + 1):\n",
+    "        result_list.append(input_list[index])\n",
+    "        i = i + 1\n",
+    "    return result_list\n",
+    "\n",
+    "print(subset(numbers, 1, 4))"
+   ]
   },
   {
    "cell_type": "code",
@@ -34,10 +54,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def every_nth(input_list, step_size):\n",
+    "    result = []\n",
+    "    for index in input_list:\n",
+    "        if (index + 1 % step_size == 0):\n",
+    "            result.append(input_list[index])\n",
+    "    return result\n",
+    "\n",
+    "print(every_nth(numbers, 2))"
+   ]
   },
   {
    "cell_type": "code",
@@ -244,8 +281,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.10.6"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.10"
   },
   "orig_nbformat": 4,
   "vscode": {
