--- a/HAZI/HAZI01/1_homework_empty.ipynb
+++ b/HAZI/HAZI01/1_homework_empty.ipynb
@@ -15,14 +15,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2, 3, 4]\n"
+      "[2, 3, 4, 5]\n"
      ]
     }
    ],
@@ -54,23 +54,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[]\n"
+      "[2, 4, 6, 8]\n"
      ]
     }
    ],
    "source": [
     "def every_nth(input_list, step_size):\n",
     "    result = []\n",
-    "    for index in input_list:\n",
-    "        if (index + 1 % step_size == 0):\n",
-    "            result.append(input_list[index])\n",
+    "    \n",
+    "    for index in range(step_size - 1, len(input_list), step_size):\n",
+    "        result.append(input_list[index])\n",
+    "\n",
     "    return result\n",
     "\n",
     "print(every_nth(numbers, 2))"
@@ -90,6 +91,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def unique(input_list):\n",
+    "    return len(set(input_list)) == len(input_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -102,10 +113,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 12, 5, 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "numbers = [[1, 2], [3, 4], [12], [5, 6]]\n",
+    "\n",
+    "def flatten(input_list):\n",
+    "    result_list = []\n",
+    "    i = 0\n",
+    "    while i < len(input_list):\n",
+    "        tmp = input_list[i]\n",
+    "        j = 0\n",
+    "        while j < len(tmp):\n",
+    "            result_list.append(tmp[j])\n",
+    "            j = j + 1\n",
+    "        i = i + 1\n",
+    "    return result_list\n",
+    "\n",
+    "print(flatten(numbers))"
+   ]
   },
   {
    "cell_type": "code",
@@ -121,10 +156,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "list1 = [1, 2, 3]\n",
+    "list2 = [4, 5, 6]\n",
+    "list3 = [7, 8, 9]\n",
+    "\n",
+    "def merge_list(*args):\n",
+    "    result_list = []\n",
+    "    for index in args:\n",
+    "        result_list.extend(index)\n",
+    "    return result_list\n",
+    "\n",
+    "print(merge_list(list1, list2, list3))"
+   ]
   },
   {
    "cell_type": "code",
@@ -144,7 +199,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def reverse_tuples(input_list):\n",
+    "    result_list = []\n",
+    "    for tup in input_list:\n",
+    "        output_list.append(tuple(reversed(tup)))\n",
+    "        \n",
+    "    return result_list"
+   ]
   },
   {
    "cell_type": "code",
@@ -163,7 +225,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def remove_duplicates(input_list):\n",
+    "    result_list = []\n",
+    "    for elem in input_list:\n",
+    "        if elem not in result_list:\n",
+    "            result_list.append(elem)\n",
+    "            \n",
+    "    return result_list"
+   ]
   },
   {
    "cell_type": "code",
@@ -182,7 +252,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def transpose(input_list):\n",
+    "    transposed_list = list(zip(*input_list))\n",
+    "    \n",
+    "    return transposed_list"
+   ]
   },
   {
    "cell_type": "code",
@@ -202,7 +277,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def split_into_chunks(input_list, chunk_size):\n",
+    "    for sublist in input_list:\n",
+    "        for i in range(0, len(sublist), chunk_size):\n",
+    "            output_list.append(sublist[i:i+chunk_size])\n",
+    "    return output_list"
+   ]
   },
   {
    "cell_type": "code",
@@ -221,7 +302,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def merge_dicts(*dicts):\n",
+    "    result = {}\n",
+    "    for dictionary in dicts:\n",
+    "        result.update(dictionary)\n",
+    "    return result"
+   ]
   },
   {
    "cell_type": "code",
@@ -241,7 +328,16 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def by_parity(input_list):\n",
+    "    result = {\"even\": [], \"odd\": []}\n",
+    "    for num in input_list:\n",
+    "        if num % 2 == 0:\n",
+    "            result[\"even\"].append(num)\n",
+    "        else:\n",
+    "            result[\"odd\"].append(num)\n",
+    "    return result"
+   ]
   },
   {
    "cell_type": "code",
@@ -262,7 +358,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def mean_key_value(input_dict):\n",
+    "    result_dict = {}\n",
+    "    for key, values in input_dict.items():\n",
+    "        mean_value = sum(values) / len(values)\n",
+    "        result_dict[key] = mean_value\n",
+    "    return result_dict"
+   ]
   },
   {
    "cell_type": "code",
