--- a/GYAK/GYAK01/1_lesson_practice_empty.ipynb
+++ b/GYAK/GYAK01/1_lesson_practice_empty.ipynb
@@ -55,10 +55,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[False, True, False, True, False, True, False, True]\n"
+     ]
+    }
+   ],
+   "source": [
+    "numbers = [1, 2, 3, 4, 5, 6, 7, 8]\n",
+    "\n",
+    "def is_odd(input_list: int) -> bool:\n",
+    "    res_list = []\n",
+    "    for index in input_list:\n",
+    "        if (input_list[index - 1] % 2 == 0):\n",
+    "            res_list.append(True)\n",
+    "        else:\n",
+    "            res_list.append(False)\n",
+    "    return res_list\n",
+    "\n",
+    "print(is_odd(numbers))"
+   ]
   },
   {
    "cell_type": "code",
@@ -79,7 +100,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def element_wise_sum(input_list_1, input_list_2):\n",
+    "    "
+   ]
   },
   {
    "cell_type": "code",
