--- a/GYAK/GYAK01/1_lesson_practice_empty.ipynb
+++ b/GYAK/GYAK01/1_lesson_practice_empty.ipynb
@@ -102,7 +102,13 @@
    "outputs": [],
    "source": [
     "def element_wise_sum(input_list_1, input_list_2):\n",
-    "    "
+    "    if len(input_list_1) != len(input_list_2):\n",
+    "        raise ValueError(\"The two input lists must have the same length.\")\n",
+    "    result = []\n",
+    "    for i in range(len(input_list_1)):\n",
+    "        result.append(input_list_1[i] + input_list_2[i])\n",
+    "    \n",
+    "    return result\n"
    ]
   },
   {
@@ -123,7 +129,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def dict_to_list(input_dict):\n",
+    "    result = list(input_dict.items())\n",
+    "    \n",
+    "    return result\n"
+   ]
   },
   {
    "cell_type": "code",
