--- a/HAZI/HAZI06/NJCleaner.ipynb
+++ b/HAZI/HAZI06/NJCleaner.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 286,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,14 +22,20 @@
     "        self.data = pd.read_csv(csv_path)\n",
     "\n",
     "    def order_by_scheduled_time(self) -> pd.DataFrame:\n",
-    "        return self.data.sort_values(by=['scheduled_time'])\n",
+    "        sorted = self.data.sort_values(by=['scheduled_time'])\n",
+    "        self.data = sorted\n",
+    "        return self.data\n",
     "    \n",
     "    def drop_columns_and_nan(self) -> pd.DataFrame:\n",
-    "        return self.data.drop(['from', 'to'], axis=1).dropna()\n",
+    "        droped = self.data.drop(columns=['from', 'to']).dropna()\n",
+    "        self.data = droped\n",
+    "        return self.data\n",
     "    \n",
     "    def convert_date_to_day(self) -> pd.DataFrame:\n",
     "        self.data['day'] = (pd.to_datetime(self.data['date'])).dt.day_name()\n",
-    "        return self.data.drop(['date'], axis=1)\n",
+    "        droped = self.data.drop(columns=['date'])\n",
+    "        self.data = droped\n",
+    "        return self.data\n",
     "    \n",
     "    def convert_scheduled_time_to_part_of_the_day(self) -> pd.DataFrame:\n",
     "        self.data['part_of_the_day'] = pd.to_datetime(self.data['scheduled_time']).dt.hour.apply(lambda time: 'early_morning' if time >= 4 and time < 8\n",
@@ -49,7 +55,9 @@
     "        return self.data\n",
     "    \n",
     "    def drop_unnecessary_columns(self) -> pd.DataFrame:\n",
-    "        return self.data.drop(columns=['train_id', 'actual_time', 'delay_minutes'])\n",
+    "        droped = self.data.drop(columns=['train_id', 'actual_time', 'delay_minutes'])\n",
+    "        self.data = droped\n",
+    "        return droped\n",
     "    \n",
     "    def save_first_60k(self,path:str) -> None:\n",
     "        self.data.head(60000).to_csv(path)\n",
@@ -58,33 +66,21 @@
     "        self.order_by_scheduled_time()\n",
     "        self.drop_columns_and_nan()\n",
     "        self.convert_date_to_day()\n",
-    "        \n",
-    "    "
+    "        self.convert_scheduled_time_to_part_of_the_day()\n",
+    "        self.convert_delay()\n",
+    "        self.drop_unnecessary_columns()\n",
+    "        self.save_first_60k(path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": 287,
    "metadata": {},
    "outputs": [],
    "source": [
     "test_df = NJCleaner('2018_03.csv')\n",
     "\n",
-    "test_df.order_by_scheduled_time()\n",
-    "\n",
-    "test_df.drop_columns_and_nan()\n",
-    "\n",
-    "test_df.convert_date_to_day()\n",
-    "\n",
-    "test_df.convert_scheduled_time_to_part_of_the_day()\n",
-    "\n",
-    "test_df.convert_delay()\n",
-    "\n",
-    "test_df.drop_unnecessary_columns()\n",
-    "\n",
-    "test_df.save_first_60k('NJ.csv')\n",
-    "\n",
-    "\n"
+    "test_df.prep_df('NJ.csv')"
    ]
   }
  ],
