--- a/HAZI/HAZI08/HAZI08.ipynb
+++ b/HAZI/HAZI08/HAZI08.ipynb
@@ -944,7 +944,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def train_logistic_regression(X_train, y_train) -> sk.linear_model._base.LinearRegression:\n",
+    "def train_logistic_regression(X_train, y_train) -> sk.linear_model._base.LogisticRegression:\n",
     "    model = LogisticRegression().fit(X_train, y_train)\n",
     "    return model\n",
     "\n",
