--- a/GYAK/GYAK08/LogisticRegression.ipynb
+++ b/GYAK/GYAK08/LogisticRegression.ipynb
@@ -50,7 +50,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "WirC4JJduu5J"
       },
@@ -66,7 +66,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "7o4DG1f9uu5J"
       },
@@ -78,11 +78,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "Nnhg_m-ou8Ot"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "['DESCR',\n",
+              " 'data',\n",
+              " 'data_module',\n",
+              " 'feature_names',\n",
+              " 'filename',\n",
+              " 'frame',\n",
+              " 'target',\n",
+              " 'target_names']"
+            ]
+          },
+          "execution_count": 3,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "dir(iris)"
       ]
@@ -178,7 +196,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.11.0"
+      "version": "3.10.11"
     },
     "orig_nbformat": 4
   },
