--- a/HAZI/HAZI10/HAZI10.ipynb
+++ b/HAZI/HAZI10/HAZI10.ipynb
@@ -2,11 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import tensorflow as tf"
+    "import tensorflow as tf\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -27,10 +28,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def mnist_digit_data():\n",
+    "    (train_images, train_labels), (test_images, test_labels) = tf.keras.datasets.mnist.load_data()\n",
+    "    train_images = train_images / 255.0\n",
+    "    test_images = test_images / 255.0\n",
+    "    return train_images, train_labels, test_images, test_labels"
+   ]
   },
   {
    "cell_type": "code",
@@ -52,10 +59,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def mnist_model():\n",
+    "    model = tf.keras.Sequential([\n",
+    "    tf.keras.layers.Flatten(input_shape=(28, 28)),\n",
+    "    tf.keras.layers.Dense(128, activation='relu'),\n",
+    "    tf.keras.layers.Dense(10, activation='softmax')\n",
+    "    ])\n",
+    "    return model"
+   ]
   },
   {
    "cell_type": "code",
@@ -77,10 +92,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def model_compile(model):\n",
+    "    model.compile(optimizer='adam',\n",
+    "              loss=tf.keras.losses.SparseCategoricalCrossentropy(from_logits=False),\n",
+    "              metrics=['accuracy'])\n",
+    "    return model"
+   ]
   },
   {
    "cell_type": "code",
@@ -100,10 +121,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def model_fit(model, epochs, train_images, train_labels):\n",
+    "    model.fit(train_images, train_labels, epochs=epochs)\n",
+    "    return model"
+   ]
   },
   {
    "cell_type": "code",
@@ -123,10 +148,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def model_evaluate(model, test_images, test_labels):\n",
+    "    loss_and_acc = model.evaluate(test_images, test_labels)\n",
+    "    return loss_and_acc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n",
+      "1875/1875 [==============================] - 3s 1ms/step - loss: 0.2591 - accuracy: 0.9258\n",
+      "Epoch 2/10\n",
+      "1875/1875 [==============================] - 2s 1ms/step - loss: 0.1130 - accuracy: 0.9669\n",
+      "Epoch 3/10\n",
+      "1875/1875 [==============================] - 3s 1ms/step - loss: 0.0785 - accuracy: 0.9761\n",
+      "Epoch 4/10\n",
+      "1875/1875 [==============================] - 2s 1ms/step - loss: 0.0586 - accuracy: 0.9818\n",
+      "Epoch 5/10\n",
+      "1875/1875 [==============================] - 3s 1ms/step - loss: 0.0457 - accuracy: 0.9856\n",
+      "Epoch 6/10\n",
+      "1875/1875 [==============================] - 2s 1ms/step - loss: 0.0366 - accuracy: 0.9883\n",
+      "Epoch 7/10\n",
+      "1875/1875 [==============================] - 3s 1ms/step - loss: 0.0284 - accuracy: 0.9907\n",
+      "Epoch 8/10\n",
+      "1875/1875 [==============================] - 3s 2ms/step - loss: 0.0236 - accuracy: 0.9928\n",
+      "Epoch 9/10\n",
+      "1875/1875 [==============================] - 3s 1ms/step - loss: 0.0193 - accuracy: 0.9938\n",
+      "Epoch 10/10\n",
+      "1875/1875 [==============================] - 3s 1ms/step - loss: 0.0168 - accuracy: 0.9946\n",
+      "313/313 [==============================] - 0s 998us/step - loss: 0.0814 - accuracy: 0.9788\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[0.08136399835348129, 0.9787999987602234]"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'''\n",
+    "train_images, train_labels, test_images, test_labels = mnist_digit_data()\n",
+    "model = mnist_model()\n",
+    "model = model_compile(model)\n",
+    "model = model_fit(model, 10, train_images, train_labels)\n",
+    "model_evaluate(model, test_images, test_labels)\n",
+    "'''"
+   ]
   }
  ],
  "metadata": {
@@ -145,7 +227,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.11"
   },
   "orig_nbformat": 4
  },
